# EAE_Firmware

./: CMakeLists.txt  Dockerfile  README.md  Readme.md  build.sh
gtest/: run_tests.sh  test_can_manager.cpp  test_dio_manager.cpp  test_fan_control.cpp  test_pid_controller.cpp  test_pump_control.cpp  test_state_machine.cpp  test_temp_sensor.cpp
src/: can_manager.c  can_manager.h  dio_manager.c  dio_manager.h  fan_control.c  fan_control.h  main.c  pid_controller.c  pid_controller.h  pump_control.c  pump_control.h  state_machine.c  state_machine.h  temp_sensor.c  temp_sensor.h
